--- a/analise_store.ipynb
+++ b/analise_store.ipynb
@@ -447,7 +447,7 @@
     "    'https://raw.githubusercontent.com/curran/data/gh-pages'\n",
     "    '/superstoreSales/superstoreSales.csv'\n",
     ")\n",
-    "df = pd.read_csv(url, encoding='ISO-8859-1')  # adiciona encoding para evitar UnicodeDecodeError (latin1/ansi)\n",
+    "df = pd.read_csv(url, encoding='ISO-8859-1')  \n",
     "\n",
     "df"
    ]
